--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Your Security is our Priority!">
+  <meta name="author" content="Henry Valencia">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
-  <title>Stylish Portfolio - Start Bootstrap Theme</title>
+  <title>Colware Security</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
