--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,10 +10,10 @@
             <div class="service-item">
               <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+              <i class="fa fa-chart-bar fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Vulnerabilities Analysis</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <a href="#" class="btn btn-light">Learn More</a>
@@ -23,10 +23,10 @@
             <div class="service-item">
               <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-compass fa-stack-1x text-primary"></i>
+              <i class="fa fa-exclamation-circle fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Intrusion Testing</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <a href="#" class="btn btn-light">Learn More</a>
@@ -36,10 +36,10 @@
             <div class="service-item">
               <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-flask fa-stack-1x text-primary"></i>
+              <i class="fa fa-project-diagram fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Ethical Hacking</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <a href="#" class="btn btn-light">Learn More</a>
@@ -49,10 +49,10 @@
             <div class="service-item">
               <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-shield fa-stack-1x text-primary"></i>
+              <i class="fa fa-briefcase fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Consultancy</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <a href="#" class="btn btn-light">Learn More</a>
@@ -67,3 +67,6 @@
   </div>
   <!-- /.container -->
 </section>
+<!--
+https://fontawesome.com/icons?d=gallery&c=business&m=free
+-->
